<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news_feed_menu"
            android:icon="@drawable/ic_baseline_newspaper_24"
            android:title="@string/news_feed_menu" />
        <item
            android:id="@+id/covid_cases_menu"
            android:icon="@drawable/ic_baseline_coronavirus_24"
            android:title="@string/covid_cases_menu" />
        <item
            android:id="@+id/favorites_menu"
            android:icon="@drawable/ic_baseline_bookmark_border_24"
            android:title="@string/bookmarked_menu" />
    </group>

    <item android:title="@string/settings_menu">
        <menu>
            <item
                android:id="@+id/preferences_menu"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/preferences_menu" />
        </menu>
    </item>
</menu>