<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_color"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/article_text_padding_bottom"
        android:background="@color/faded_orange"
        android:paddingBottom="@dimen/article_text_padding_bottom"
        android:stretchColumns="1, 2, 3, 4, 5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>
            <TextView
                style="@style/covidCaseTable"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/new_cases"/>
            <TextView
                style="@style/covidCaseTable"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/location"/>
            <TextView
                style="@style/covidCaseTable"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/date"/>
            <TextView
                style="@style/covidCaseTable"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/active_cases"/>
            <TextView
                style="@style/covidCaseTable"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/deaths"/>

        </TableRow>

    </TableLayout>

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout"/>
    <TextView
        android:id="@+id/no_list"
        style="@style/noListTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout"/>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/covid_cases_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/table_layout"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>